hello-world/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
spec:
  selector:
    app: hello-world
  type: LoadBalancer
  ports:
    - name: docker-port
      protocol: TCP
      port: 80
      targetPort: 80
  loadBalancerIP: 192.168.188.217
