hello-world/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  namespace: hello-world
  annotations:
    spec.ingressClassName: traefik
spec:
  rules:
  - host: hello2.kube.lab
    http:
      paths:
      - path: /
        pathType: Prefix
        backend: 
          service:
            name: hello-world
            port:
              number: 80
